Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47093

Windows Accessibility code crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.4.0, 5.4.1, 5.4.2, 5.5.0
    • None
    • Windows
    • a0e2e715f58134c7c913996e036b154df1f71d99

      When running accessibility software like Dragon random crashes will occur in the QtWidget dll. After tracing this down it ends up being a zero pointer dereference in QAccessibleWidget ( widget() call may return 0 ). This can be avoided by testing isValid() on the QAccessibleWidget before using it. This change is applied to qtbase\src\plugins\platforms\windows\accessible\qwindowsmsaaaccessible.cpp

      I've attached a fix for qwindowsmsaaaccessible.cpp

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            frederik Frederik Gladhorn
            altera_2011 ron
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes